fixed bug in xaml with nested List properties in a DatePicker

--- a/src/WPFDesktopUI/Views/QuickBooks/QuickBooksSidePaneView.xaml
+++ b/src/WPFDesktopUI/Views/QuickBooks/QuickBooksSidePaneView.xaml
@@ -79,7 +79,6 @@
                                             <ColumnDefinition SharedSizeGroup="FirstColumn"  />
                                             <ColumnDefinition />
                                             <ColumnDefinition />
-                                            <ColumnDefinition />
                                         </Grid.ColumnDefinitions>
 
                                         <!-- <TextBlock Text="{Binding Key}" /> -->
@@ -94,7 +93,8 @@
                                                   ToolTipService.ShowOnDisabled = "True"
                                                   IsEnabled="{Binding Value.ComboBox.IsEnabled}" >
                                             <ComboBox.ToolTip>
-                                                <TextBlock>Please import a .csv file in the 'Import' tab before custom lists can be generated</TextBlock>
+                                                <TextBlock Text="{Binding Value.ToolTip}">
+                                                </TextBlock>
                                             </ComboBox.ToolTip>
                                         </ComboBox>
 
@@ -105,7 +105,7 @@
                                                  Visibility="{Binding Value.HasStringPayload, Converter={StaticResource BoolToVis}, FallbackValue=Hidden}"
                                                  Style="{StaticResource QbSidePaneValue}" >
                                         </TextBox>
-                                        <DatePicker Text="{Binding Value.Payload}"
+                                        <DatePicker SelectedDate="{Binding Value.Payload}"
                                                     Grid.Column="2"
                                                     IsEnabled="{Binding Value.ComboBox.IsBlank}"
                                                     Visibility="{Binding Value.HasDateTimePayload, Converter={StaticResource BoolToVis}, FallbackValue=Hidden}"
