decoupled MainTabs and QbInteractable controls - moved latter into new interface

--- a/src/WPFDesktopUI/Views/QuickBooks/QuickBooksSidePaneView.xaml
+++ b/src/WPFDesktopUI/Views/QuickBooks/QuickBooksSidePaneView.xaml
@@ -48,7 +48,7 @@
                     </ProgressBar>
                 </Grid>
 
-                <Button x:Name="QbExport"
+                <Button x:Name="QbInteract"
                         Grid.Row="2"
                         Grid.Column="1" 
                         Style="{StaticResource ButtonClose}"
