added SQLite save and load functionality for Customer tab

--- a/src/WPFDesktopUI/Views/CustomerView.xaml
+++ b/src/WPFDesktopUI/Views/CustomerView.xaml
@@ -3,13 +3,42 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:cal="http://www.caliburnproject.org"
              xmlns:local="clr-namespace:WPFDesktopUI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <DataGrid x:Name="Cxs" 
-                  ItemsSource="{Binding Cxs, Mode=TwoWay}"
-                  AutoGenerateColumns="True" >
-        </DataGrid>
-    </Grid>
+    <Border BorderThickness="20">
+        <DockPanel>
+
+            <Grid DockPanel.Dock="Top">
+                <DataGrid x:Name="Cxs" 
+                          cal:Message.Attach="[Event CellEditEnding]=[Action OnCellEditEnding()]"
+                          ItemsSource="{Binding Cxs, Mode=TwoWay}"
+                          AutoGenerateColumns="True" 
+                          AlternatingRowBackground="LightGray"
+                          CanUserAddRows="False"
+                          IsReadOnly="{Binding IsReadOnly}">
+                </DataGrid>
+            </Grid>
+
+            <Grid DockPanel.Dock="Bottom">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+
+                <Button x:Name="BtnUpdate"
+                        Grid.Row="2"
+                        Grid.Column="1" 
+                        Style="{StaticResource ButtonClose}">
+                    Save
+                </Button>
+            </Grid>
+        </DockPanel>
+    </Border>
 </UserControl>
