--- a/src/WPFDesktopUI/Views/ShellView.xaml
+++ b/src/WPFDesktopUI/Views/ShellView.xaml
@@ -45,17 +45,17 @@
         </Menu>
         <TabControl cal:Message.Attach="[Event SelectionChanged]=[Action TabChange];"
                     DockPanel.Dock="Top">
-            <TabItem Header="Import"
+            <TabItem Header="{Binding ImportViewModel.TabHeader }"
                      IsSelected="{Binding TabImportIsSelected}">
                 <ContentControl x:Name="ImportViewModel" />
                 <!--<NewUserControl:ImportView/>-->
             </TabItem>
-            <TabItem Header="QuickBooks"
+            <TabItem Header="{Binding QuickBooksViewModel.TabHeader }"
                      IsSelected="{Binding TabQuickBooksIsSelected}">
                 <ContentControl x:Name="QuickBooksViewModel" />
                 <!--<NewUserControl:QuickBooksView/>-->
             </TabItem>
-            <TabItem Header="Customer"
+            <TabItem Header="{Binding CustomerViewModel.TabHeader }"
                      IsSelected="{Binding TabCustomerIsSelected}">
                 <ContentControl x:Name="CustomerViewModel" />
                 <!--<NewUserControl:CustomerViewModel/>-->
