--- a/src/WPFDesktopUI/Views/ImportView.xaml
+++ b/src/WPFDesktopUI/Views/ImportView.xaml
@@ -60,6 +60,7 @@
                       Grid.Column="0"
                       Grid.ColumnSpan="3"
                       AlternatingRowBackground="LightGray"
+                      CanUserDeleteRows="False"
                       CanUserAddRows="False" SelectionChanged="CsvData_SelectionChanged">
             </DataGrid>
         </Grid>
