--- a/src/WPFDesktopUI/Views/Preferences/PreferencesQuickBooksView.xaml
+++ b/src/WPFDesktopUI/Views/Preferences/PreferencesQuickBooksView.xaml
@@ -27,6 +27,9 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -171,8 +174,70 @@
 
 
         <!-- ROW 12 -->
+        <CheckBox x:Name="RenameHeaderOtherCheckBox1"
+                  Grid.Row="12"
+                  Grid.Column="0"
+                  IsChecked="{Binding Source={StaticResource Settings}, Path=Default.StnQbInvHasHeaderOther1}"
+                  Style="{StaticResource Check1}"
+                  Content="Using 'Other1' field in QuickBooks header">
+        </CheckBox>
+
+
+
+        <!-- ROW 13 -->
+        <StackPanel Orientation="Horizontal"
+                    Grid.Row="13"
+                    Grid.Column="0"
+                    Margin="10,0">
+            <TextBlock Style="{StaticResource Pref2}">
+                Custom Name for 'Other1' Header:
+            </TextBlock>
+        </StackPanel>
+
+        <!-- ROW 14 -->
+        <TextBox x:Name="RenameHeaderOtherTextBox1"
+                 Grid.Row="14"
+                 Grid.Column="0"
+                 IsEnabled="{Binding IsChecked, ElementName=RenameHeaderOtherCheckBox1, Mode=OneWay}"
+                 Text="{Binding Source={StaticResource Settings}, Path=Default.StnQbInvHeaderOtherName1}"
+                 Margin="50,0"
+                 MinWidth="100"
+                 HorizontalAlignment="Left"
+                 Height="18" />
+
+        <!-- ROW 15 -->
+        <CheckBox x:Name="RenameHeaderOtherCheckBox2"
+                  Grid.Row="15"
+                  Grid.Column="0"
+                  IsChecked="{Binding Source={StaticResource Settings}, Path=Default.StnQbInvHasHeaderOther2}"
+                  Style="{StaticResource Check1}"
+                  Content="Using 'Other2' field in QuickBooks header">
+        </CheckBox>
+
+        <!-- ROW 16 -->
+        <StackPanel Orientation="Horizontal"
+                    Grid.Row="16"
+                    Grid.Column="0"
+                    Margin="10,0">
+            <TextBlock Style="{StaticResource Pref2}">
+                Custom Name for 'Other2' Header:
+            </TextBlock>
+        </StackPanel>
+
+        <!-- ROW 17 -->
+        <TextBox x:Name="RenameHeaderOtherTextBox2"
+                 Grid.Row="17"
+                 Grid.Column="0"
+                 IsEnabled="{Binding IsChecked, ElementName=RenameHeaderOtherCheckBox2, Mode=OneWay}"
+                 Text="{Binding Source={StaticResource Settings}, Path=Default.StnQbInvHeaderOtherName2}"
+                 Margin="50,0"
+                 MinWidth="100"
+                 HorizontalAlignment="Left"
+                 Height="18" />
+
+        <!-- ROW 18 -->
         <StackPanel  Orientation="Vertical"
-                    Grid.Row="12"
+                    Grid.Row="18"
                     Grid.ColumnSpan="2"
                     >
             <Separator Grid.ColumnSpan="2"/>
