--- a/src/WPFDesktopUI/Views/PluginView.xaml
+++ b/src/WPFDesktopUI/Views/PluginView.xaml
@@ -6,7 +6,18 @@
         xmlns:local="clr-namespace:WPFDesktopUI.Views"
         mc:Ignorable="d"
         Title="PluginView" Height="450" Width="800">
-    <Grid>
-        <TextBlock Padding="20">Version: 0.4.2</TextBlock>
-    </Grid>
+    <DockPanel>
+        <Grid DockPanel.Dock="Top">
+            <ScrollViewer VerticalScrollBarVisibility="Auto" >
+                <DataGrid x:Name="PluginDataGrid" 
+                          ItemsSource="{Binding Plugins, Mode=TwoWay}"
+                          AutoGenerateColumns="True" 
+                          AlternatingRowBackground="LightGray"
+                          CanUserDeleteRows="False"
+                          CanUserAddRows="False"
+                          IsReadOnly="{Binding IsReadOnly}">
+                </DataGrid>
+            </ScrollViewer>
+        </Grid>
+    </DockPanel>
 </Window>
