--- a/src/WPFDesktopUI/Views/PluginView.xaml
+++ b/src/WPFDesktopUI/Views/PluginView.xaml
@@ -3,20 +3,48 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:cal="http://www.caliburnproject.org"
         xmlns:local="clr-namespace:WPFDesktopUI.Views"
         mc:Ignorable="d"
-        Title="PluginView" Height="450" Width="800">
-    <DockPanel>
-        <Grid DockPanel.Dock="Top">
-            <ScrollViewer VerticalScrollBarVisibility="Auto" >
-                <DataGrid x:Name="PluginDataGrid" 
-                          ItemsSource="{Binding Plugins, Mode=TwoWay}"
-                          AutoGenerateColumns="True" 
-                          AlternatingRowBackground="LightGray"
-                          CanUserDeleteRows="False"
-                          CanUserAddRows="False" >
-                </DataGrid>
-            </ScrollViewer>
-        </Grid>
-    </DockPanel>
+        Icon="Images/icon-sangwa.ico"
+        Title="{Binding Title, Mode=TwoWay}" Height="450" Width="800">
+    <Border BorderThickness="20">
+        <DockPanel>
+            <Grid DockPanel.Dock="Top">
+                <ScrollViewer VerticalScrollBarVisibility="Auto" >
+                    <DataGrid x:Name="PluginDataGrid" 
+                              cal:Message.Attach="[Event CellEditEnding]=[Action OnCellEditEnding()]"
+                              ItemsSource="{Binding ReactiveCollection, Mode=TwoWay}"
+                              AutoGenerateColumns="True" 
+                              AlternatingRowBackground="LightGray"
+                              CanUserDeleteRows="False"
+                              CanUserAddRows="False" 
+                              MinHeight="300">
+                    </DataGrid>
+                </ScrollViewer>
+            </Grid>
+
+
+            <Grid DockPanel.Dock="Bottom">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+
+                <Button x:Name="BtnUpdate"
+                        Grid.Row="2"
+                        Grid.Column="2" 
+                        Style="{StaticResource ButtonClose}">
+                    Save
+                </Button>
+            </Grid>
+        </DockPanel>
+    </Border>
 </Window>
