--- a/src/WPFDesktopUI/Views/PluginView.xaml
+++ b/src/WPFDesktopUI/Views/PluginView.xaml
@@ -7,7 +7,8 @@
         xmlns:local="clr-namespace:WPFDesktopUI.Views"
         mc:Ignorable="d"
         Icon="Images/icon-sangwa.ico"
-        Title="{Binding Title, Mode=TwoWay}" Height="450" Width="800">
+        Title="{Binding Title, Mode=TwoWay}" 
+        Height="450" Width="800">
     <Border BorderThickness="20">
         <DockPanel>
             <Grid DockPanel.Dock="Top">
