--- a/src/WPFDesktopUI/Views/PreferencesView.xaml
+++ b/src/WPFDesktopUI/Views/PreferencesView.xaml
@@ -9,7 +9,8 @@
         mc:Ignorable="d"
         cal:Message.Attach="[Event Closing] = [Action OnClose()]"
         Icon="Images/icon-sangwa.ico"
-        Title="Preferences" Height="450" Width="800" MinHeight="200" MinWidth="400">
+        Title="{Binding Title, Mode=TwoWay}"
+        Height="450" Width="800" MinHeight="200" MinWidth="400">
 
     <Window.Resources>
         <Style x:Key="ButtonClose" TargetType="Button">
