--- a/src/WPFDesktopUI/Views/ImportView.xaml
+++ b/src/WPFDesktopUI/Views/ImportView.xaml
@@ -9,60 +9,66 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <Border BorderThickness="20">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+        <DockPanel>
+            <!-- DOCKPANEL BOTTOM-->
 
-            <!-- Row 0 -->
+            <Grid DockPanel.Dock="Bottom">
+                <TextBox x:Name="ConsoleMessage" 
+                         TextAlignment="Center"
+                         Background="Transparent"
+                         BorderThickness="0"
+                         IsReadOnly="True"
+                         TextWrapping="Wrap"
+                         MinHeight="50"
+                         Margin="20">
+                </TextBox>
+            </Grid>
 
+            <!-- DOCKPANEL TOP-->
 
-            <!-- Row 1 -->
-            
+            <Grid DockPanel.Dock="Top">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
 
-            <!-- Row 2 -->
-            <TextBlock Text="CSV"
-                       Grid.Row="2" 
-                       Grid.Column="0"
-                       TextAlignment="Right"
-                       Padding="5,0">
-            </TextBlock>
-            <Button x:Name="BtnOpenCsvFile"
-                    Grid.Row="2"
-                    Grid.Column="1">
-                Select file
-            </Button>
-            <TextBlock Text="{Binding Path=CsvFilePath, Mode=OneWay}" 
-                       Grid.Row="2" 
-                       Grid.Column="2"
-                       Padding="5,0"
-                       TextWrapping="WrapWithOverflow">
-            </TextBlock>
+                <!-- Row 0 -->
+                <TextBlock Text="CSV"
+                           Grid.Row="0" 
+                           Grid.Column="0"
+                           TextAlignment="Right"
+                           Padding="5,0">
+                </TextBlock>
+                <Button x:Name="BtnOpenCsvFile"
+                        Grid.Row="0"
+                        Grid.Column="1">
+                    Select file
+                </Button>
+                <TextBlock Text="{Binding Path=CsvFilePath, Mode=OneWay}" 
+                           Grid.Row="0" 
+                           Grid.Column="2"
+                           Padding="5,0"
+                           TextWrapping="WrapWithOverflow">
+                </TextBlock>
 
-            <!-- Row 3 -->
-            <Button x:Name="BtnQbImport" 
-                    Grid.Row="3"
-                    Grid.Column="1">
-                Import to QB
-            </Button>
+                <!-- Row 1 -->
+                <DataGrid x:Name="CsvDataView"
+                          VerticalAlignment="Stretch"
+                          Grid.Row="1"
+                          Grid.Column="0"
+                          Grid.ColumnSpan="3"
+                          MinHeight="200"
+                          AlternatingRowBackground="LightGray"
+                          CanUserDeleteRows="False"
+                          CanUserAddRows="False" SelectionChanged="CsvData_SelectionChanged">
+                </DataGrid>
 
-            <!-- Row 4 -->
-            <DataGrid x:Name="CsvDataView"
-                      Grid.Row="4"
-                      Grid.Column="0"
-                      Grid.ColumnSpan="3"
-                      AlternatingRowBackground="LightGray"
-                      CanUserDeleteRows="False"
-                      CanUserAddRows="False" SelectionChanged="CsvData_SelectionChanged">
-            </DataGrid>
-        </Grid>
+            </Grid>
+        </DockPanel>
     </Border>
 </UserControl>
